syntax = "proto3";

package api.panshee.v1.proto;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

option java_package = "api.panshee.v1.proto";
option java_multiple_files = true;
option java_outer_classname = "TokenProto";

option go_package = ".;pb";

// Structure of a token
message TokenDTO {
    // Token string
    string value = 1;
    //Expiration time of the token
    google.protobuf.Timestamp expiration_time = 2;
}

// A representation of a request for refreshing access token
message RefreshAccessTokenDTORequest {
    // id of the user to who wants to refresh token
    string parent = 1 [(google.api.field_behavior) = REQUIRED];
    // Refresh token used to refresh access token
    TokenDTO refresh_token = 2 [(google.api.field_behavior) = REQUIRED];
}

// Response with new access_token
message RefreshAccessTokenDTOResponse {
    // Access token returning to user
    TokenDTO access_token = 1;
}
